<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_admin_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_admin_home" />
    <item
        android:id="@+id/nav_admin_requests"
        android:icon="@drawable/ic_assignment"
        android:title="@string/nav_all_requests" />
    <item
        android:id="@+id/nav_send_notification"
        android:icon="@drawable/ic_send"
        android:title="@string/nav_send_notification" />
    <item
        android:id="@+id/nav_admin_log"
        android:icon="@drawable/ic_article"
        android:title="@string/nav_admin_log" />
    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_services" />
</menu>
